[gd_scene load_steps=3 format=2]

[ext_resource path="res://CanvasLayer.gd" type="Script" id=1]

[sub_resource type="GDScript" id=1]
script/source = "extends HTTPRequest


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 0.513344
margin_top = 31.3139
margin_right = 12.5133
margin_bottom = 51.3139
text = "Click after click login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
script = SubResource( 1 )

[node name="HTTPRequest2" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
